tests/spec/compile-fail/004_hidden_allocation.zn
// category: compile-fail
// profile: freestanding
// purpose: allocation must be explicit in no-allocation contexts

module tests.fail.hiddenAllocation;

import alloc.string.{String, format};

fn consume(text: String) {}

@noAlloc
fn tick(value: I32) {
    let text = format("value={}", value); // expected-error: hidden heap allocation
    consume(text);
}
